@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.11.18-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-11-18 07:18:48, took 00:14:43, with 50 workers, on 3532 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2024-11-18 07:56:55, took 00:14:19, with 50 workers, on 3534 cases, 0 failed, 0 traces, 2 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -3026,6 +3026,8 @@ http://sources.freertr.org/cfg/rout-bgp862.tst;rout-bgp862.tst;success;unicast+s
 http://sources.freertr.org/cfg/rout-bgp863.tst;rout-bgp863.tst;success;spf bgp in chain
 http://sources.freertr.org/cfg/rout-bgp864.tst;rout-bgp864.tst;success;spf bgp prefix withdraw
 http://sources.freertr.org/cfg/rout-bgp865.tst;rout-bgp865.tst;success;spf bgp change in metric
+http://sources.freertr.org/cfg/rout-bgp866.tst;rout-bgp866.tst;success;spf bgp change in tag
+http://sources.freertr.org/cfg/rout-bgp867.tst;rout-bgp867.tst;success;spf bgp triangle connection
 http://sources.freertr.org/cfg/rout-eigrp01.tst;rout-eigrp01.tst;success;eigrp point2point connection
 http://sources.freertr.org/cfg/rout-eigrp02.tst;rout-eigrp02.tst;success;eigrp point2multipoint connection
 http://sources.freertr.org/cfg/rout-eigrp03.tst;rout-eigrp03.tst;success;eigrp point2point chain
