@@ -3022,6 +3022,8 @@ qc pass: unicast+spf over bgp with additional path
 qc pass: spf bgp in chain
 qc pass: spf bgp prefix withdraw
 qc pass: spf bgp change in metric
+qc pass: spf bgp change in tag
+qc pass: spf bgp triangle connection
 qc pass: eigrp point2point connection
 qc pass: eigrp point2multipoint connection
 qc pass: eigrp point2point chain
