@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.18-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-18 07:18:48, took 00:14:43, with 50 workers, on 3532 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-11-18 07:56:55, took 00:14:19, with 50 workers, on 3534 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -3038,6 +3038,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp863.tst">rout-bgp863.tst</a></td><td>success</td><td>spf bgp in chain</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp864.tst">rout-bgp864.tst</a></td><td>success</td><td>spf bgp prefix withdraw</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-bgp865.tst">rout-bgp865.tst</a></td><td>success</td><td>spf bgp change in metric</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp866.tst">rout-bgp866.tst</a></td><td>success</td><td>spf bgp change in tag</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/rout-bgp867.tst">rout-bgp867.tst</a></td><td>success</td><td>spf bgp triangle connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp01.tst">rout-eigrp01.tst</a></td><td>success</td><td>eigrp point2point connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp02.tst">rout-eigrp02.tst</a></td><td>success</td><td>eigrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/rout-eigrp03.tst">rout-eigrp03.tst</a></td><td>success</td><td>eigrp point2point chain</td></tr>
