@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.11.18-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-11-18 07:30:46, took 00:11:36, with 50 workers, on 619 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-11-18 08:06:35, took 00:09:18, with 50 workers, on 619 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
